# fome_zero_analytics

./: 01_Home.py  PROJECT.md  README.md  app.py  home.py  main.py  pyproject.toml  requirements.txt
data/processed/: dataset_processed.csv
notebooks/: contexto_geral.ipynb  limpeza_dados.ipynb  visao_cidade.ipynb  visao_culinaria.ipynb  visao_geral.ipynb  visao_pais.ipynb  visao_restaurantes.ipynb
pages/: 02_🌎_Indicadores_Gerais.py  02_📊_General_KPIs.py  03_🌎_Countries.py  04_🏙️_Cities.py  05_🥘_Cuisines.py  cities.py  countries.py  cuisines.py  general_kpis.py
utils/: __init__.py  cuisines_data.py  data_cleaning.py  sidebar.py
